--- a/src/app/views/tasks/tasks.component.html
+++ b/src/app/views/tasks/tasks.component.html
@@ -262,7 +262,7 @@
                   <span class="font-weight-bold ms-1">30 done</span> this month
                 </p>
               </div>
-              <div class="col-lg-6 col-5 my-auto text-end">
+              <!--<div class="col-lg-6 col-5 my-auto text-end">
                 <div class="dropdown float-lg-end pe-4">
                   <a class="cursor-pointer" id="dropdownTable" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="fa fa-ellipsis-v text-secondary"></i>
@@ -273,7 +273,7 @@
                     <li><a class="dropdown-item border-radius-md" href="javascript:;">Something else here</a></li>
                   </ul>
                 </div>
-              </div>
+              </div>-->
             </div>
           </div>
           <div class="card-body px-0 pb-2">
@@ -281,25 +281,59 @@
               <table class="table align-items-center mb-0">
                 <thead>
                 <tr>
-                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Companies</th>
-                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Members</th>
-                  <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Budget</th>
-                  <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Completion</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">ID</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Nickname</th>
+                  <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Breed</th>
+                  <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Suit</th>
+                  <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Specialization</th>
+                  <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Date of birth</th>
+                  <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Price</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr>
+                <tr *ngFor="let horse of horses">
                   <td>
                     <div class="d-flex px-2 py-1">
-                      <div>
+                      <!--<div>
                         <img src="../assets/img/small-logos/logo-xd.svg" class="avatar avatar-sm me-3" alt="xd">
                       </div>
                       <div class="d-flex flex-column justify-content-center">
                         <h6 class="mb-0 text-sm">Material XD Version</h6>
-                      </div>
+                      </div>-->
+                      {{horse.id}}
                     </div>
                   </td>
                   <td>
+                    <div class="d-flex px-2 py-1">
+                      {{horse.nickname}}
+                    </div>
+                  </td>
+                  <td>
+                    <div class="d-flex px-2 py-1">
+                      {{horse.horseDetail.breed}}
+                    </div>
+                  </td>
+                  <td>
+                    <div class="d-flex px-2 py-1">
+                      {{horse.horseDetail.suit}}
+                    </div>
+                  </td>
+                  <td>
+                    <div class="d-flex px-2 py-1">
+                      {{horse.horseDetail.specialization}}
+                    </div>
+                  </td>
+                  <td>
+                    <div class="d-flex px-2 py-1">
+                      {{horse.horseDetail.dateOfBirth}}
+                    </div>
+                  </td>
+                  <td>
+                    <div class="d-flex px-2 py-1">
+                      {{horse.horseDetail.price}}
+                    </div>
+                  </td>
+<!--                  <td>
                     <div class="avatar-group mt-2">
                       <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Tompson">
                         <img src="../assets/img/team-1.jpg" alt="team1">
@@ -329,9 +363,9 @@
                         <div class="progress-bar bg-gradient-info w-60" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
                     </div>
-                  </td>
+                  </td>-->
                 </tr>
-                <tr>
+<!--                <tr>
                   <td>
                     <div class="d-flex px-2 py-1">
                       <div>
@@ -518,7 +552,7 @@
                       </div>
                     </div>
                   </td>
-                </tr>
+                </tr>-->
                 </tbody>
               </table>
             </div>
