--- a/src/app/views/tableOfEntity/table-of-entity.component.html
+++ b/src/app/views/tableOfEntity/table-of-entity.component.html
@@ -748,10 +748,10 @@
       </div>
     </div>-->
   </div>
-<!--  <div fxFlex [hidden]="horses">
+  <div fxFlex [hidden]="horses">
     <mat-spinner></mat-spinner>
     <h4>Loading . . . Please wait!</h4>
-  </div>-->
+  </div>
 
 </div>
 
