--- a/src/app/views/coach/coach.component.css
+++ b/src/app/views/coach/coach.component.css
@@ -3,7 +3,16 @@
   border-radius: 0.75rem;
 }
 
-.mat-form-field {
-  font-size: 14px;
+table {
   width: 100%;
+}
+
+mat-form-field {
+  font-size: 14px;
+  width: 98%;
+  margin: 1%;
+}
+
+td, th {
+  width: 25%;
 }
