--- a/src/app/views/header/header.component.html
+++ b/src/app/views/header/header.component.html
@@ -4,10 +4,10 @@
     <div >
 
       <a mat-button routerLink='/horse' routerLinkActive="active" class="ms-3">
-        {{entities ? entities[0].title:'Horsess'}}
+        {{menuScreenNames ? menuScreenNames[0].title:'Horsess'}}
       </a>
       <a mat-button routerLink='/coach' routerLinkActive="active" class="ms-3">
-        {{entities ? entities[1].title:'Coachess'}}
+        {{menuScreenNames ? menuScreenNames[1].title:'Coachess'}}
       </a>
 
     </div>
