--- a/src/app/views/coach/coach-dialog/coach-dialog.component.html
+++ b/src/app/views/coach/coach-dialog/coach-dialog.component.html
@@ -2,6 +2,6 @@
   Login
   <span class="flex-spacer"></span>
   <button mat-button mat-dialog-close>&times;</button>
-  {{selectedUser ? selectedUser.id : 'sdsd'}}
+  {{selectedCoach ? selectedCoach.id : 'sdsd'}}
 </mat-toolbar>
 
