--- a/src/app/views/coach/coach.component.html
+++ b/src/app/views/coach/coach.component.html
@@ -1,3 +1,53 @@
+<div class="example-container mat-elevation-z8 table-coach">
+  <div class="example-loading-shade"
+       *ngIf="isLoadingResults || isRateLimitReached">
+    <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+    <div class="example-rate-limit-reached" *ngIf="isRateLimitReached">
+      GitHub's API rate limit has been reached. It will be reset in one minute.
+    </div>
+  </div>
+
+  <div class="example-table-container">
+
+    <table mat-table [dataSource]="data" class="example-table"
+           matSort> <!--matSortActive="created" matSortDisableClear matSortDirection="desc"-->
+
+      <!-- Number Column -->
+      <ng-container matColumnDef="number">
+        <th mat-header-cell *matHeaderCellDef>#</th>
+        <td mat-cell *matCellDef="let row">{{row.number}}</td>
+      </ng-container>
+
+      <!-- Title Column -->
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
+        <td mat-cell *matCellDef="let row">{{row.title}}</td>
+      </ng-container>
+
+      <!-- State Column -->
+      <ng-container matColumnDef="state">
+        <th mat-header-cell *matHeaderCellDef>State</th>
+        <td mat-cell *matCellDef="let row">{{row.state}}</td>
+      </ng-container>
+
+      <!-- Created Column -->
+      <ng-container matColumnDef="created">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
+          Created
+        </th>
+        <td mat-cell *matCellDef="let row">{{row.created_at | date}}</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
+
+  <mat-paginator [length]="resultsLength" [pageSize]="30" aria-label="Select page of GitHub search results"></mat-paginator>
+</div>
+<!--
+
+
 <mat-form-field appearance="legacy">
   <mat-label>Filter</mat-label>
   <input matInput (keyup)="applyFilter($event)" placeholder="fsdfs" #input>
@@ -6,31 +56,31 @@
 <div class="mat-elevation-z8 table-coach" *ngIf="coaches">
   <table mat-table [dataSource]="dataSource" matSort>
 
-    <!-- ID Column -->
+    &lt;!&ndash; ID Column &ndash;&gt;
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> # </th>
       <td mat-cell *matCellDef="let row"> {{row.id}} </td>
     </ng-container>
 
-    <!-- Surname Column -->
+    &lt;!&ndash; Surname Column &ndash;&gt;
     <ng-container matColumnDef="surname">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Surname </th>
       <td mat-cell *matCellDef="let row"> {{row.surname}}% </td>
     </ng-container>
 
-    <!-- Name Column -->
+    &lt;!&ndash; Name Column &ndash;&gt;
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
       <td mat-cell *matCellDef="let row"> {{row.name}} </td>
     </ng-container>
 
-    <!-- Patronymic Column -->
+    &lt;!&ndash; Patronymic Column &ndash;&gt;
     <ng-container matColumnDef="patronymic">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Patronymic </th>
       <td mat-cell *matCellDef="let row"> {{row.patronymic}} </td>
     </ng-container>
 
-    <!-- Patronymic Column -->
+    &lt;!&ndash; Patronymic Column &ndash;&gt;
     <ng-container matColumnDef="horseCount">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Horse Count </th>
       <td mat-cell *matCellDef="let row"> {{row.coachHorses.length}} </td>
@@ -41,7 +91,7 @@
         (click)="openDialog(row)"
         *matRowDef="let row; columns: displayedColumns;"></tr>
 
-    <!-- Row shown when there is no matching data. -->
+    &lt;!&ndash; Row shown when there is no matching data. &ndash;&gt;
     <tr class="mat-row" *matNoDataRow>
       <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
     </tr>
@@ -50,6 +100,7 @@
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
 </div>
 
+-->
 
 <div fxLayout="row" >
   <div fxFlex="100" *ngIf="coaches">
